Adding Role for all users

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookStore.Models.LoginViewModel
+﻿@model BookStore.Views.Account.ViewModel.LoginViewModel
 
 @{
     ViewData["Title"] = "Log in";
