--- a/Views/Admin/EditBook.cshtml
+++ b/Views/Admin/EditBook.cshtml
@@ -66,8 +66,9 @@
     </div>
 
     <div class="mb-3">
-        <label class="form-label">New Image (optional, max 25MB)</label>
+        <label class="form-label">New Image (max 25MB)</label>
         <input type="file" name="imageFile" class="form-control" accept="image/*" />
+        <div id="uploadStatus" style="display: none; margin-top: 5px; color: green;">Uploading...</div>
     </div>
 
     <button type="submit" class="btn btn-primary">Save Changes</button>
