--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,13 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">
+                                    <i class="bi bi-cart"></i> <!-- Cart icon -->
+                                    <span id="cartItemCount" class="badge bg-primary ms-1">0</span> <!-- Badge -->
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
                                 @{
                                     var userName = User.Identity.Name;
                                     var roles = User.Claims
@@ -57,6 +64,7 @@
                                 </span>
                             </li>
 
+
                             @if (roles.Contains("Admin"))
                             {
                                 <li class="nav-item">
@@ -66,7 +74,11 @@
 
                             <li class="nav-item">
                                 <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
-                                    <button type="submit" class="btn btn-link nav-link text-dark p-0" style="text-decoration: none;">Logout</button>
+                                    <button type="submit"
+                                            class="btn btn-danger btn-sm me-2"
+                                            onclick="return confirm('Are you sure you want to log out?');">
+                                        <i class="bi bi-box-arrow-right"></i> Logout
+                                    </button>
                                 </form>
                             </li>
                         }
