Payment method part1 (before migration)

--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -59,7 +59,7 @@
                                     }
                                     else
                                     {
-                                        <a asp-area="Views" asp-page="/Account/Login" class="btn btn-success">Login untuk Beli</a>
+                                        <a asp-controller="Account" asp-action="Login" class="btn btn-success">Login untuk Beli</a>
                                     }
                                 </div>
                             </div>
