--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,8 +38,8 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">
-                                    <i class="bi bi-cart"></i> <!-- Cart icon -->
-                                    <span id="cartItemCount" class="badge bg-primary ms-1">0</span> <!-- Badge -->
+                                    <i class="bi bi-cart"></i>
+                                    <span id="cartItemCount" class="badge bg-primary ms-1">@ViewBag.CartItemCount</span>
                                 </a>
                             </li>
 
