--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -11,6 +11,10 @@
     <div class="alert alert-info">
         <i class="bi bi-info-circle"></i> No items in cart. <a asp-controller="Home" asp-action="Index">Continue Shopping</a>
     </div>
+    <div>
+        <a asp-controller="Order" asp-action="MyOrders" class="btn btn-outline-info ms-2">View My Orders</a>
+    </div>
+    
 }
 else
 {
@@ -58,7 +62,8 @@ else
         <h5>Total: Rp @Model.Sum(i => i.Book?.Price * i.Quantity ?? 0m).ToString("N0", new System.Globalization.CultureInfo("id-ID"))</h5>
         <div>
             <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Continue Shopping</a>
-            <a href="#" class="btn btn-primary ms-2">Checkout</a>
+            <a asp-controller="Order" asp-action="Checkout" class="btn btn-primary ms-2">Checkout</a>
+            <a asp-controller="Order" asp-action="MyOrders" class="btn btn-outline-info ms-2">View My Orders</a>
         </div>
     </div>
 }
